 * src/tools.c:
   Reflect the existence of the entered command in `Set Custom Commands`
   dialog as well using the yes/no icon.


2011-04-03  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/main.c, src/prefs.c, src/tools.c:
   Fix loading and updating menu accelerators for custom commands.
 * src/prefs.c:
   Don't allow editing keybinding column of group rows.


2011-04-02  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/tools.c, doc/geany.txt, doc/geany.html:
   Improve the `Set Custom Commands` dialog.


2011-04-01  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/interface.c, src/interface.h, geany.glade:
   Rename Preferences dialog Interface subtab More -> Notebook tabs.
 * src/toolbar.c, src/dialogs.c:
   Use mimetype icon in File Properties dialog.
 * doc/geany.txt, doc/geany.html:
   Fix title capitalization.
 * src/interface.c, doc/geany.txt, doc/geany.html, geany.glade:
   Move Preferences dialog Toolbar tab under Interface tab.
 * src/build.c:
   Tweak some build dialog labels:
   Clear -> Reset.
   Fix capitalization.
   Use filetype name instead of title.
 * src/templates.c, src/templates.h, doc/geany.txt, doc/geany.html:
   Remove old filetype templates support - users can use custom file
   templates instead.


2011-04-01  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/encodings.c:
   Update regex used to find encodings for it to allow the encoding to
   be quoted, adding support for XML (closes #3183506).
 * src/encodings.c:
   Implement charset name normalization in order to better deal with
   badly-written encoding names (i.e. names found by regex search).
   This also makes encodings_get_idx_from_charset() and
   encodings_get_from_charset() more permissive regarding the passed-in
   encoding name.
 * src/encodings.c:
   Always try to honor the charset found in the document, even if the
   document can be loaded as UTF-8.
   This make files encoded with e.g. ISO-8859-1 that have the proper