@@ -18,6 +18,8 @@
    Fix loading and updating menu accelerators for custom commands.
  * src/prefs.c:
    Don't allow editing keybinding column of group rows.
+ * src/tools.c:
+   Fix ID of newly added commands in the `Set Custom Commands` dialog.
 
 
 2011-04-02  Colomban Wendling  <colomban(at)geany(dot)org>
